# hyv

./: .gitignore  CLAUDE.md  README.md  TODO-medium-term.md  TODO-near-term.md  build-deploy.md  index.html  package-lock.json  package.json  project.yml  vite.config.ts  xcode-build-deploy-local.md  xcode-build-deploy.md
Hyv/: HyvApp.swift
Hyv/Config/: AppConfig.swift
Hyv/Models/: AppState.swift  MeetingApp.swift  TranscriptSegment.swift  TranscriptionResult.swift
Hyv/Services/: AudioCaptureService.swift  AudioFileRecorder.swift  CohereTranscriptionService.swift  DiarizationService.swift  MeetingDetectorService.swift  TranscriptFileWriter.swift
Hyv/Utilities/: ProcessUtils.swift  WAVEncoder.swift
Hyv/Views/: MenuBarView.swift
docs/: future-improvements.md  how-it-works.md
scripts/: diarize_and_transcribe.py  download_models.py  requirements.txt  setup.sh
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  debug.rs  lib.rs  main.rs  state.rs  text_util.rs
src-tauri/src/audio/: aec.rs  capture.rs  mod.rs  normalize.rs  util.rs  vad.rs
src-tauri/src/output/: mod.rs  transcript_writer.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/transcription/: chunker.rs  cohere.rs  engine.rs  mel.rs  mod.rs  model_manager.rs  onnx_engine.rs  onnx_runtime.rs  parakeet.rs  tokenizer.rs
src/components/: ModelSelector.tsx  RecordingControls.tsx  StatusIndicator.tsx  TranscriptList.tsx
src/hooks/: useAppState.ts
src/lib/: commands.ts
