[package]
name = "hyv"
version = "0.3.0"
description = "macOS meeting transcription app"
edition = "2024"

[lib]
name = "hyv_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ebur128 = "0.1"
aec3 = "0.1"
cpal = "0.15"
ringbuf = "0.4"
rubato = "0.16"
hound = "3.5"
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
whisper-rs = { version = "0.14", features = ["metal"] }
dirs = "6"
chrono = "0.4"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { git = "https://github.com/yury/cidre", rev = "a9587fa", features = ["av"] }
